--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,5 @@ before_install:
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
 
-install: ./gradlew assemble -x dokka -x dokkaJavadoc
-script: ./gradlew check -x dokka -x dokkaJavadoc
+install: ./gradlew assemble -x dokka -x dokkaJavadoc  --warn
+script: ./gradlew check -x dokka -x dokkaJavadoc  --warn
