--- a/build.gradle
+++ b/build.gradle
@@ -39,31 +39,31 @@ buildscript {
         partiture_version = '0.15'
 
         quasar_exclusions = [
-                'co.paralleluniverse**',
-                'groovy**',
-                'com.esotericsoftware**',
-                'io.swagger**',
-                'io.netty**',
-                'jdk**',
-                'junit**',
-                'kotlin**',
-                'net.rubygrapefruit.**',
-                'org.gradle.**',
-                'org.apache.**',
-                'org.jacoco.**',
-                'org.junit**',
-                'org.slf4j**',
-                'worker.org.gradle.**',
-                'com.nhaarman.mockito_kotlin**',
-                'okhttp3.internal**',
-                'org.apache**',
-                'org.assertj**',
-                'org.hamcrest**',
-                'org.mockito**',
-                'org.opentest4j**',
+                "co.paralleluniverse**",
+                "groovy**",
+                "com.esotericsoftware**",
+                "io.swagger**",
+                "io.netty**",
+                "jdk**",
+                "junit**",
+                "kotlin**",
+                "net.rubygrapefruit.**",
+                "org.gradle.**",
+                "org.apache.**",
+                "org.jacoco.**",
+                "org.junit**",
+                "org.slf4j**",
+                "worker.org.gradle.**",
+                "com.nhaarman.mockito_kotlin**",
+                "okhttp3.internal**",
+                "org.apache**",
+                "org.assertj**",
+                "org.hamcrest**",
+                "org.mockito**",
+                "org.opentest4j**",
                 'org.springframework**',
                 'reactor.core.publisher**',
-                'com.github.manosbatsis.corbeans.spring.boot**',
+                'com.github.manosbatsis.corbeans**',
                 "org.testcontainers**"]
     }
 
