--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-dist: trusty
 language: java
 
 jdk:
@@ -17,5 +16,12 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
 
-install: ./gradlew assemble -x dokka -x dokkaJavadoc  --quiet
-script: ./gradlew check -x dokka -x dokkaJavadoc  --quiet
+before_install:
+  - './.travis/main.sh'
+
+install: skip
+
+script:
+  - 'docker version'
+  - ./gradlew clean assemble -x dokka -x dokkaJavadoc  --quiet
+  - ./gradlew check -x dokka -x dokkaJavadoc  --quiet
