--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,8 @@ buildscript {
         netty_version = '4.1.46.Final'
         asm_version = '7.1'
         artemis_version = '2.6.2'
-        quasar_version='0.7.13_r3'
+        //quasar_version='0.7.13_r3'
+        //quasar_classifier = "jdk8"
 
         tokens_release_version = '1.1'
         tokens_release_group = 'com.r3.corda.lib.tokens'
@@ -187,9 +188,9 @@ allprojects {
                     if (details.requested.group == "net.corda" && !exclusions.contains(details.requested.name)) {
                         details.useTarget group: corda_release_group, name: details.requested.name, version: corda_release_version
                     }
-                    if (details.requested.group == "co.paralleluniverse" && details.requested.name.startsWith("quasar-core")) {
-                        details.useTarget group: details.requested.group, name: details.requested.name, version: quasar_version
-                    }
+                    //if (details.requested.group == "co.paralleluniverse" && details.requested.name.startsWith("quasar")) {
+                    //    details.useTarget group: details.requested.group, name: details.requested.name, version: quasar_version, classi
+                    //}
                     if (details.requested.group == "io.netty" && details.requested.name.startsWith("netty")
                             && !details.requested.name.startsWith("netty-tcnative-boringssl-static")) {
                         details.useTarget group: details.requested.group, name: details.requested.name, version: netty_version
