--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,4 @@ install: skip
 
 script:
   - 'docker version'
-  - ./gradlew clean assemble -x dokka -x dokkaJavadoc  --quiet
-  - ./gradlew check -x dokka -x dokkaJavadoc  --quiet
+  - ./gradlew clean build nodedriverTest -x :corda-testacles-cordapp-example:test -x dokka -x dokkaJavadoc --quiet
