--- a/corda-testacles-cordapp-example/src/test/resources/application.properties
+++ b/corda-testacles-cordapp-example/src/test/resources/application.properties
@@ -1,7 +1,6 @@
 # The cordapp packages to scan for during tests
 corbeans.cordapPackages=\
-  mypackage.cordapp.contract,\
-  mypackage.cordapp.workflow,\
+  testacles.sample.cordapp,\
   com.github.manosbatsis.partiture.flow
 # Optional properties (Corda 4.0+) with defaults taken from CordaRPCClientConfiguration.DEFAULT
 #corbeans.nodes.partyB.connectionMaxRetryInterval=
