--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,13 @@ cache:
     - $HOME/.gradle/wrapper/
 
 before_install:
-  - chmod +x ./.travis/main.sh
-  - './.travis/main.sh'
+  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+  - sudo apt-get update
+  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
 
 install: skip
 
 script:
   - 'docker version'
-  - ./gradlew clean build nodedriverTest cordformTest -x :corda-testacles-cordapp-example:test -x dokka -x dokkaJavadoc --quiet
+  - ./gradlew clean build -x dokka -x dokkaJavadoc --quiet
