--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group=com.github.manosbatsis.corda.testacles
 version=0.10-SNAPSHOT
 
-kapt.verbose=true
+kapt.verbose=false
 kapt.incremental.apt=false
 kapt.use.worker.api=true
 signing.keyId=<YOUR-KEY-ID>
