--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
 group=com.github.manosbatsis.corda.testacles
-version=0.10-SNAPSHOT
+version=0.10
+
+org.gradle.jvmargs=-Xmx6g -XX:MaxPermSize=3000m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
 kapt.verbose=false
 kapt.incremental.apt=false
