--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,12 +32,12 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
-      - run: ./gradle dependencies
+      - run: ./gradlew dependencies
 
       - save_cache:
           paths:
-            - ~/.gradle
+            - ~/.gradlew
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
       # run tests!
-      - run: ./gradle test
+      - run: ./gradlew test
