WiP impl of mock network utils

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ pluginManagement {
 rootProject.name = 'corda-testacles-parent'
 enableFeaturePreview("GRADLE_METADATA")
 include 'corda-testacles-nodedriver',
+        'corda-testacles-mocknetwork',
         'corda-testacles-testcontainers',
         'corda-testacles-processor',
         'corda-testacles-model',
