--- a/corda-testacles-cordapp-example/src/test/resources/application.properties
+++ b/corda-testacles-cordapp-example/src/test/resources/application.properties
@@ -49,7 +49,9 @@ management.endpoints.web.cors.allow-credentials=true
 # ==================================
 #debug=true
 logging.level.root=WARN
-logging.levelorg.springframework.beans=debug
+logging.level.com.github.manosbatsis.corda.testacles=debug
+logging.level.org.testcontainers=info
+
 logging.level.org.apache.activemq=error
 # logging.level.net.corda=INFO
 # logging.level.org.apache.http=DEBUG
