--- a/corda-testacles-cordapp-example/src/test/resources/application.properties
+++ b/corda-testacles-cordapp-example/src/test/resources/application.properties
@@ -48,9 +48,9 @@ management.endpoints.web.cors.allow-credentials=true
 # Logging
 # ==================================
 #debug=true
-logging.level.root=WARN
+logging.level.root=warn
 logging.level.com.github.manosbatsis.corda.testacles=debug
-logging.level.org.testcontainers=info
+logging.level.org.testcontainers=warn
 
 logging.level.org.apache.activemq=error
 # logging.level.net.corda=INFO
