--- a/build.gradle
+++ b/build.gradle
@@ -371,6 +371,7 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: [':corda-testacles
         projectCordapp {
             deploy = false
         }
+        runSchemaMigration = true
         cordapp project(":corda-testacles-cordapp-example")
         cordapp "com.github.manosbatsis.partiture:partiture:$partiture_version"
         rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
