--- a/build.gradle
+++ b/build.gradle
@@ -101,7 +101,6 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-noarg:$kotlin_version"
-        classpath "org.jetbrains.dokka:dokka-gradle-plugin:${dokka_version}"
         // release to Maven Central through Sonatype OSSRH
         // without the need to use Nexus GUI
         classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.12.0"
@@ -113,9 +112,8 @@ buildscript {
 
 plugins {
     id "com.github.hierynomus.license" version "0.15.0"
+    id "org.jetbrains.dokka" version "0.9.16"
 }
-
-configurations { dokkaRuntime }
 
 apply plugin: 'io.codearte.nexus-staging'
 nexusStaging {
@@ -149,9 +147,6 @@ Set<Project> findDokkaProjects() {
     }
 }
 
-configurations {
-    dokkaRuntime
-}
 
 task dokkaForGhPages (type: org.jetbrains.dokka.gradle.DokkaTask, overwrite: true) {
     outputDirectory = "$rootProject.buildDir/docs/0.x"
@@ -176,8 +171,6 @@ allprojects {
     apply from: "${rootProject.projectDir}/repositories.gradle"
 
     configurations {
-
-        // dokkaRuntime
         cloneCorda { transitive = false }
         cloneTestcontainers { transitive = false }
         // Adding a configuration that extends existing configuration:
@@ -371,7 +364,7 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: [':corda-testacles
         projectCordapp {
             deploy = false
         }
-        runSchemaMigration = true
+        // 4.6 only: runSchemaMigration = true
         cordapp project(":corda-testacles-cordapp-example")
         cordapp "com.github.manosbatsis.partiture:partiture:$partiture_version"
         rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
