--- a/corda-testacles-mocknetwork/build.gradle
+++ b/corda-testacles-mocknetwork/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'org.jetbrains.dokka'
 dependencies {
     compile project(':corda-testacles-model-api')
     compile project(':corda-testacles-model')
-
     compile("$corda_release_group:corda-node-driver:$corda_release_version")
+
+    //dokkaRuntime "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
 }
