--- a/corda-testacles-cordapp-example/src/test/resources/application.properties
+++ b/corda-testacles-cordapp-example/src/test/resources/application.properties
@@ -48,8 +48,11 @@ management.endpoints.web.cors.allow-credentials=true
 # Logging
 # ==================================
 #debug=true
-logging.level.root=WARN
-logging.levelorg.springframework.beans=debug
+logging.level.root=warn
+logging.level.com.github.manosbatsis.corda.testacles=debug
+logging.level.org.apache.activemq.artemis.core.client=error
+logging.level.org.testcontainers=warn
+
 logging.level.org.apache.activemq=error
 # logging.level.net.corda=INFO
 # logging.level.org.apache.http=DEBUG
