--- a/corda-testacles-mocknetwork/build.gradle
+++ b/corda-testacles-mocknetwork/build.gradle
@@ -3,8 +3,7 @@ apply plugin: 'org.jetbrains.dokka'
 //apply plugin: 'java-library'
 
 dependencies {
-    compile project(':corda-testacles-model-api')
-    compile project(':corda-testacles-model')
+    compile project(':corda-testacles-common')
     compile("$corda_release_group:corda-node-driver:$corda_release_version")
 
     //dokkaRuntime "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
