--- a/corda-testacles-processor/build.gradle
+++ b/corda-testacles-processor/build.gradle
@@ -21,7 +21,7 @@ idea {
 
 dependencies {
 
-    compile(project(':corda-testacles-model-api'))
+    compile(project(':corda-testacles-common'))
 
     implementation("$corda_release_group:corda-core:$corda_release_version")
     runtime("$corda_release_group:corda:$corda_release_version")
