--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
       # Run tests!
-      - run: ./gradlew build -x test cordformTest
+      - run: ./gradlew build -x dokkaJavadoc
 
       # Store test reports
       - store_artifacts:
