--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,6 @@ jobs:
     machine:
       image: ubuntu-1604:202007-01
 
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
     resource_class: large
 
     working_directory: ~/repo
@@ -33,7 +28,6 @@ jobs:
             - v1-dependencies-
 
       - run: ./gradlew dependencies
-
       - save_cache:
           paths:
             - ~/.gradlew
@@ -41,11 +35,14 @@ jobs:
 
       # Run tests!
       - run: ./gradlew build -x dokkaJavadoc
+      # Store test results
+      - store_test_results:
+          path: corda-testacles-cordapp-example/build/test-results
 
       # Store test reports
       - store_artifacts:
           path: corda-testacles-cordapp-example/build/reports
-
+          destination: testreport
       # Store generated nodes
       - store_artifacts:
           path: corda-testacles-cordapp-example/build/testacles
