--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,11 +40,11 @@ jobs:
           path: corda-testacles-cordapp-example/build/test-results
 
       # Store test reports
-      - store_artifacts:
-          path: corda-testacles-cordapp-example/build/reports
-          destination: testreport
+      #- store_artifacts:
+      #    path: corda-testacles-cordapp-example/build/reports
+      #    destination: testreport
       # Store generated nodes
-      - store_artifacts:
-          path: corda-testacles-cordapp-example/build/testacles
-          destination: testacles
+      #- store_artifacts:
+      #    path: corda-testacles-cordapp-example/build/testacles
+      #    destination: testacles
 
