--- a/corda-testacles-cordapp-example/src/test/resources/application.properties
+++ b/corda-testacles-cordapp-example/src/test/resources/application.properties
@@ -49,6 +49,8 @@ management.endpoints.web.cors.allow-credentials=true
 # ==================================
 #debug=true
 logging.level.root=warn
+
+logging.level.testacles.sample.test=debug
 logging.level.com.github.manosbatsis.corda.testacles=debug
 logging.level.org.apache.activemq.artemis.core.client=error
 logging.level.org.testcontainers=warn
