--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
       # Run tests!
-      - run: ./gradlew build cordformTest -x test -x dokkaJavadoc
+      - run: ./gradlew clean build -x dokkaJavadoc
       # Store test results
       - store_test_results:
           path: corda-testacles-cordapp-example/build/test-results
