--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,19 +3,17 @@
 # Check https://circleci.com/docs/2.0/language-java/ for more details
 #
 version: 2.1
-machine: true
+executorType: machine
 jobs:
   build:
     machine:
       image: ubuntu-1604:202007-01
 
     resource_class: large
-
     working_directory: ~/repo
-
     environment:
       # Customize the JVM maximum heap limit
-      JVM_OPTS: -Xmx3200m
+      # JVM_OPTS: -Xmx3200m
       TERM: dumb
 
     steps:
