--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,7 @@ jobs:
 
       # Run tests!
       - run: ./gradlew build -x dokkaJavadoc
+      - run: docker network prune
       #- run: ./gradlew mocknetworkTest -x test -x dokkaJavadoc
       #- run: ./gradlew nodedriverTest -x test -x dokkaJavadoc
       #- run: ./gradlew cordformTest -x test -x dokkaJavadoc
