--- a/corda-testacles-common/build.gradle
+++ b/corda-testacles-common/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     compile("com.github.manosbatsis.kotlin-utils:kotlin-utils-api:$kotlinutils_version")
     implementation("$corda_release_group:corda-core:$corda_release_version")
     implementation("$corda_release_group:corda-node:$corda_release_version")
+    implementation("$corda_release_group:corda-test-utils:$corda_release_version")
     //implementation("$corda_release_group:corda-core-test-utils:$corda_release_version")
     implementation("org.junit.jupiter:junit-jupiter-api:$junit_jupiter_version")
 
