--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
       # Run tests!
-      - run: ./gradlew build -x dokkaJavadoc
+      - run: ./gradlew clean build -x dokkaJavadoc
       - run: docker network prune
       # Store test results
       - store_test_results:
