--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,8 @@ jobs:
   build:
     machine:
       image: ubuntu-2004:202010-01
+      java:
+        version: 'openjdk8'
 
     resource_class: large
 
